// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a form file input component 1`] = `
<div
  className="group"
>
  <label
    className="form-file-input-label"
  >
    test-file-form
  </label>
  <input
    accept="images"
    className="form-file-input"
    name="file form"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`renders a form input component 1`] = `
<div
  className="group"
>
  <label
    className="hide form-input-label"
  >
    test-form
  </label>
  <input
    className="form-input"
    name="regular form"
    onChange={[Function]}
    type="regular"
    value="form-value"
  />
</div>
`;
